2017-02-27  Richard Biener  <rguenther@suse.de>

PR tree-optimization/45397
	* tree-ssa-pre.c (eliminate_insert): Handle BIT_AND_EXPR.
	* tree-ssa-sccvn.c (valueized_wider_op): New helper.
	(visit_nary_op): Add pattern matching for CSEing sign-changed
	or truncated operations with wider ones.

	* gcc.dg/tree-ssa/pr45397.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@245752 138bc75d-0d04-0410-961f-82ee72b054a4